# passive-network-asset-discovery-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.codex/skills/passive-asset-discovery-architecture/: SKILL.md
.codex/skills/passive-asset-discovery-ci/: SKILL.md
.codex/skills/passive-asset-discovery-code-review/: SKILL.md
.codex/skills/passive-asset-discovery-container-delivery/: SKILL.md
.codex/skills/passive-asset-discovery-documentation/: SKILL.md
.codex/skills/passive-asset-discovery-git-workflow/: SKILL.md
.codex/skills/passive-asset-discovery-implementation/: SKILL.md
.codex/skills/passive-asset-discovery-operations/: SKILL.md
.codex/skills/passive-asset-discovery-planning/: SKILL.md
.codex/skills/passive-asset-discovery-release/: SKILL.md
.codex/skills/passive-asset-discovery-requirements/: SKILL.md
.codex/skills/passive-asset-discovery-sdlc/: SKILL.md
.codex/skills/passive-asset-discovery-testing/: SKILL.md
.codex/skills/write-clear-comments/: SKILL.md
.github/: product-backlog-github-projects.md
benchmarks/: LivePipelineBenchmark.cpp
configs/: default.yaml  live.yaml  pcap.yaml
db/: schema.sql
docs/: Agile_Scrum_Passive_Network_Asset_Discovery.md  SPRINT0.md  SPRINT2.md  SPRINT3.md  SPRINT4.md  asset-output-contract.md  build-deploy-demo-guide.md  final-submission-checklist.md  requirements-project.md  system-design.md  table-output-guide.md
docs/demo/: 01-preparation.md  02-build-and-test.md  03-pcap-offline.md  04-postgres-local.md  05-docker-image.md  06-docker-compose.md  07-live-capture-native.md  08-live-capture-docker.md  09-error-handling.md  10-help-text.md  11-evidence-checklist.md  12-troubleshooting.md  13-cli-parameters.md
docs/design-spec/: asset-events.md  asset-output-contract.md  docker-packaging-guide.md  system-design.md  system-programming-improvement-proposal.md
docs/sprints/: SPRINT4.md
include/application/live/: BoundedQueue.hpp  LiveCapturePipeline.hpp
include/application/monitor/: AssetMonitor.hpp
include/application/parser/: PacketContext.hpp  PacketParserFacade.hpp  ParserEngine.hpp  ParserInterface.hpp  ParserRegistry.hpp
include/asset/: AssetStore.hpp
include/capture/: PacketCapture.hpp
include/cli/: Arguments.hpp
include/domain/: AssetEvent.hpp  AssetEventDetector.hpp  AssetStore.hpp  EventRateLimiter.hpp
include/infrastructure/capture/: AfPacketCaptureBackend.hpp  PacketCapture.hpp
include/infrastructure/output/: CsvRenderer.hpp  EventSink.hpp  JsonRenderer.hpp  TableRenderer.hpp
include/infrastructure/packet/: ArpPacket.hpp  EthernetFrame.hpp
include/infrastructure/storage/: PostgresWriter.hpp
include/interface/cli/: Arguments.hpp
include/output/: CsvRenderer.hpp  JsonRenderer.hpp  TableRenderer.hpp
include/parser/: ArpPacket.hpp  AssetObservation.hpp  PacketParsers.hpp
include/plugins/parser/: ArpPlugin.hpp  BuiltinParserPlugins.hpp  DhcpPlugin.hpp  DnsPlugin.hpp
include/pnad/app/: LiveCapturePipeline.hpp
include/pnad/capture/: AfPacketCaptureBackend.hpp  PacketCapture.hpp
include/pnad/cli/: Arguments.hpp
include/pnad/config/: AppConfig.hpp
include/pnad/discovery/: AssetMonitor.hpp  AssetObservation.hpp  AssetStore.hpp  CsvRenderer.hpp  JsonRenderer.hpp  TableRenderer.hpp
include/pnad/error/: AppError.hpp
include/pnad/event/: AssetEvent.hpp  AssetEventDetector.hpp  EventRateLimiter.hpp  EventSink.hpp
include/pnad/packet/: ArpPacket.hpp  ArpPlugin.hpp  BuiltinParserPlugins.hpp  DhcpPlugin.hpp  DnsPlugin.hpp  EthernetFrame.hpp  NetbiosPlugin.hpp  PacketContext.hpp  PacketParserFacade.hpp  ParserEngine.hpp  ParserInterface.hpp  ParserRegistry.hpp  SsdpPlugin.hpp  TcpPlugin.hpp
include/pnad/storage/: PostgresWriter.hpp
include/pnad/system/: ByteView.hpp
include/storage/: PostgresWriter.hpp
openspec/changes/system-design/: design.md  proposal.md  tasks.md
samples/: GenerateLargePcap.py  GenerateMultiAssetPcap.py  README.md  arp.pcap  multi-asset.pcap
scripts/: verify-docker-runtime.sh
src/: main.cpp
src/app/: LiveCapturePipeline.cpp
src/application/live/: LiveCapturePipeline.cpp
src/application/monitor/: AssetMonitor.cpp
src/application/parser/: PacketContext.cpp  PacketParserFacade.cpp  ParserEngine.cpp  ParserInterface.cpp  (+1 more)
src/asset/: AssetStore.cpp
src/capture/: AfPacketCaptureBackend.cpp  PacketCapture.cpp
src/cli/: Arguments.cpp
src/config/: AppConfig.cpp
src/discovery/: AssetMonitor.cpp  AssetObservation.cpp  AssetStore.cpp  CsvRenderer.cpp  JsonRenderer.cpp  TableRenderer.cpp
src/domain/: AssetEvent.cpp  AssetEventDetector.cpp  AssetObservation.cpp  AssetStore.cpp  EventRateLimiter.cpp
src/event/: AssetEvent.cpp  AssetEventDetector.cpp  EventRateLimiter.cpp  EventSink.cpp
src/output/: CsvRenderer.cpp  JsonRenderer.cpp  TableRenderer.cpp
src/packet/: ArpPacket.cpp  ArpPlugin.cpp  BuiltinParserPlugins.cpp  DhcpPlugin.cpp  DnsPlugin.cpp  EthernetFrame.cpp  NetbiosPlugin.cpp  PacketContext.cpp  PacketParserFacade.cpp  ParserEngine.cpp  ParserInterface.cpp  ParserRegistry.cpp  SsdpPlugin.cpp  TcpPlugin.cpp
src/parser/: ArpPacket.cpp  AssetObservation.cpp  EthernetFrame.cpp  PacketParsers.cpp
src/storage/: PostgresWriter.cpp
tests/: AppConfigTests.cpp  ArgumentsTests.cpp  ArpPacketTests.cpp  AssetEventDetectorTests.cpp  AssetMonitorTests.cpp  AssetStoreTests.cpp  BoundedQueueTests.cpp  CMakeLists.txt  CaptureBackendTests.cpp  CsvRendererTests.cpp  DnsPluginTests.cpp  EthernetFrameTests.cpp  EventRateLimiterTests.cpp  EventSinkTests.cpp  ExpectFailureContains.cmake  ExpectOutputContains.cmake  GenerateDhcpPcap.py  GenerateEmptyPcap.cmake  GenerateMacChangePcap.py  JsonRendererTests.cpp  LiveCapturePipelineTests.cpp  PacketContextTests.cpp  PacketParserTests.cpp  ParserEngineTests.cpp  PostgresWriterTests.cpp  TableRendererTests.cpp  ValidateDatabaseRequired.cmake  ValidateDhcpJsonOutput.py  ValidateEventNdjsonOutput.py  ValidateJsonOutput.py  ValidateMultiAssetJsonOutput.py  ValidatePostgresWrite.cmake
(+30 files in other folders)
